Update Azure documentation for setting up local env